<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StartMotion</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="photo_activity">Photo Activity</string>
    <string name="list_images_actovity">All Images listed</string>
    <string name="welcome">Welcome,please login</string>
    <string name="user_name">Username</string>
    <string name="user_pass">Password</string>
    <string name="user_pass_conf">Confirm password</string>
    <string name="user_email">Email</string>
    <string name="user_pass_hint">Enter your password over here &#8230;</string>
    <string name="user_name_hint">Enter your username over here &#8230;</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="remember_me">Remember me</string>
    <string name="picture">Picture</string>
    <string name="btnIntend">Take Picture</string>
    <string name="refresh">Make Gif</string>
    <string name="instruct">Long click On Items to refresh list</string>
    <string name="cannot">Cannot</string>
    <string name="album_name">CameraSample</string>
    <string name="all_images">All Images</string>
    <string name="downloaded_images">Downloaded Images</string>
    <string name="invalid_user">Invalid username or password</string>

</resources>