<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/editUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/user_name" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editUsername"
        android:ems="10"
        android:hint="@string/user_pass"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editPasswordConf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editPassword"
        android:ems="10"
        android:hint="@string/user_pass_conf"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editPasswordConf"
        android:ems="10"
        android:hint="@string/user_email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editEmail"
        android:text="@string/register" />

    <TextView
        android:id="@+id/wrongInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnRegister"
        android:layout_alignBottom="@+id/btnRegister"
        android:layout_marginLeft="46dp"
        android:layout_marginStart="46dp"
        android:layout_toEndOf="@+id/btnRegister"
        android:layout_toRightOf="@+id/btnRegister"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FF0000" />

</RelativeLayout>